# ByteNotes

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
include/: application.h
include/backend/: bn.h  font_manager.h  note.h
include/frontend/: style.h  ui.h
src/: application.cpp  main.cpp
src/backend/: bn.cpp  font_manager.cpp
src/frontend/: style.cpp  ui.cpp
